--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -787,6 +787,63 @@ a:hover {
   color: #4e4e4e;
 }
 
+
+
+/*--------------------------------------------------------------
+# Project
+--------------------------------------------------------------*/
+
+
+.projectCard{
+  height: 400px;
+  position: relative;
+  transform-style: preserve-3d;
+}
+
+.projectCard .face{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backface-visibility: hidden;
+  transition: 2s ease-in-out;
+  transform: perspective(500px) rotateY(0deg);
+}
+
+.projectCard .face.front{
+  background: #ff0;
+}
+
+.projectCard:hover .face.front{
+  transform: perspective(500px) rotateY(180deg);
+}
+
+.projectCard .face.back{
+  background: #3bc2ff;
+  color: #fff;
+  transform: perspective(500px) rotateY(180deg);
+}
+
+.projectCard:hover .face.back{
+  transform: perspective(500px) rotateY(360deg);
+}
+
+.projectCard .face h2{
+  font-size: 4em;
+  text-transform: uppercase;
+  transform: perspective(500px) translateZ(50px);
+}
+
+
+
+
+
+
 /*--------------------------------------------------------------
 # Counter
 --------------------------------------------------------------*/
